--- a/style.css
+++ b/style.css
@@ -8,14 +8,25 @@ h1{
 	font-family:"Gill Sans Nova",sans-serif;
 	}
 
-p,li{
+p{
 	color: #385623;				
 	margin-top:1rem;
 	margin-right:1rem;
 	margin-bottom:2rem;
-	margin-left:3rem;
+	margin-left:5rem;
 	font-size: 12pt;
-	line-height:160%;
+	line-height:120%;
+	font-family:"Calibri",sans-serif;
+	}
+	
+li{
+	color: #385623;				
+	margin-top:1rem;
+	margin-right:1rem;
+	margin-bottom:2rem;
+	margin-left:4rem;
+	font-size: 12pt;
+	line-height:100%;
 	font-family:"Calibri",sans-serif;
 	}
 	
