--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 h1{
 	color:#C00000;
-	margin-top:3rem;
-	margin-right:1rem;
-	margin-bottom:1rem;
-	margin-left:1rem;
-	font-size:2rem;
+	margin-top:10pt;
+	margin-right:1pt;
+	margin-bottom:1pt;
+	margin-left:1pt;
+	font-size:14pt;
 	font-family:"Gill Sans Nova",sans-serif;
 	}
 
 p{
 	color: #385623;				
-	margin-top:1rem;
-	margin-right:1rem;
-	margin-bottom:2rem;
-	margin-left:5rem;
+	margin-top:5pt;
+	margin-right:5pt;
+	margin-bottom:5pt;
+	margin-left:20pt;
 	font-size: 12pt;
 	line-height:120%;
 	font-family:"Calibri",sans-serif;
@@ -21,61 +21,61 @@ p{
 	
 li{
 	color: #385623;				
-	margin-top:1rem;
-	margin-right:1rem;
-	margin-bottom:2rem;
-	margin-left:4rem;
+	margin-top:5pt;
+	margin-right:5pt;
+	margin-bottom:5pt;
+	margin-left:0pt;
 	font-size: 12pt;
-	line-height:100%;
+	line-height:110%;
 	font-family:"Calibri",sans-serif;
 	}
 	
 .logo1{
 	color: #000000;				
-	margin-top:0rem;
-	margin-right:0rem;
-	margin-bottom:0rem;
-	margin-left:0rem;
+	margin-top:0pt;
+	margin-right:0pt;
+	margin-bottom:0pt;
+	margin-left:0pt;
 	font-size: 80.0pt;
 	font-family:"Gill Sans Nova",sans-serif;
 	}
 	
 .logo2{
 	color: #000000;				
-	margin-top:0rem;
-	margin-right:0rem;
-	margin-bottom:0rem;
-	margin-left:0rem;
+	margin-top:0pt;
+	margin-right:0pt;
+	margin-bottom:0pt;
+	margin-left:0pt;
 	font-size: 48.0pt;
 	font-family:"Gill Sans Nova",sans-serif;
 	}
 	
 .logo3{
 	color: #FF0000;				
-	margin-top:0rem;
-	margin-right:0rem;
-	margin-bottom:0rem;
-	margin-left:0rem;
+	margin-top:0pt;
+	margin-right:0pt;
+	margin-bottom:0pt;
+	margin-left:0pt;
 	font-size: 80.0pt;
 	font-family:"Gill Sans Nova",sans-serif;
 	}	
 
 .logo_link{
 	color: #FF0000;				
-	margin-top:0rem;
-	margin-right:0rem;
-	margin-bottom:0rem;
-	margin-left:0rem;
+	margin-top:0pt;
+	margin-right:0pt;
+	margin-bottom:0pt;
+	margin-left:0pt;
 	font-size: 20.0pt;
 	font-family:"Gill Sans Nova",sans-serif;
 	}
 
 #recuo{
 	color: #385623;				
-	margin-top:1rem;
-	margin-right:1rem;
-	margin-bottom:1rem;
-	margin-left:2rem;
+	margin-top:1pt;
+	margin-right:1pt;
+	margin-bottom:1pt;
+	margin-left:20pt;
 	font-size: 14pt;
 	font-family:"Calibri",sans-serif;
 	}
